--- a/src/tk/sunnylan/tacn/gui/taui1/LoginScreen.fxml
+++ b/src/tk/sunnylan/tacn/gui/taui1/LoginScreen.fxml
@@ -5,6 +5,7 @@
 <?import com.jfoenix.controls.JFXSpinner?>
 <?import com.jfoenix.controls.JFXTextField?>
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Hyperlink?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
@@ -45,6 +46,11 @@
                <padding>
                   <Insets top="5.0" />
                </padding>
+            </StackPane>
+            <StackPane>
+               <children>
+                  <Hyperlink fx:id="linkCancel" contentDisplay="CENTER" onAction="#linkCancelClicked" text="Cancel" textAlignment="CENTER" />
+               </children>
             </StackPane>
          </children>
       </VBox>
