--- a/src/tk/sunnylan/tacn/gui/taui1/SubjectView.fxml
+++ b/src/tk/sunnylan/tacn/gui/taui1/SubjectView.fxml
@@ -2,21 +2,27 @@
 
 <?import com.jfoenix.controls.JFXTreeTableView?>
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.control.SplitPane?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.StackPane?>
 
 <AnchorPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="tk.sunnylan.tacn.gui.taui1.SubjectViewController">
 	<children>
-      <BorderPane AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-         <center>
-      
-      		<JFXTreeTableView fx:id="tableMarks" editable="true" showRoot="false" stylesheets="@../../../../../res/css/table.css" BorderPane.alignment="CENTER" />
-         </center>
-         <right>
-            <StackPane fx:id="summaryPane" BorderPane.alignment="CENTER" />
-         </right>
-      </BorderPane>
+      <SplitPane dividerPositions="0.66666" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+        <items>
+          <AnchorPane minHeight="0.0" minWidth="0.0">
+               <children>
+            
+            		<JFXTreeTableView fx:id="tableMarks" editable="true" showRoot="false" stylesheets="@../../../../../res/css/table.css" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+               </children>
+            </AnchorPane>
+          <AnchorPane minHeight="0.0" minWidth="0.0">
+               <children>
+                  <StackPane fx:id="summaryPane" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+               </children>
+            </AnchorPane>
+        </items>
+      </SplitPane>
 
 	</children>
 	<padding>
