--- a/src/tk/sunnylan/tacn/gui/taui1/SummaryView.fxml
+++ b/src/tk/sunnylan/tacn/gui/taui1/SummaryView.fxml
@@ -12,10 +12,10 @@
 	<children>
 		<VBox alignment="CENTER" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
 			<padding>
-				<Insets left="10.0" />
+				<Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
 			</padding>
 			<children>
-				<JFXTreeTableView fx:id="tableWeights" editable="true" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefWidth="400.0" showRoot="false" stylesheets="@../../../../../res/css/table.css" />
+				<JFXTreeTableView fx:id="tableWeights" editable="true" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefWidth="400.0" showRoot="false" stylesheets="@../../../../../res/css/table.css" VBox.vgrow="SOMETIMES" />
 				<StackPane>
 					<children>
 						<Label fx:id="lblAverage" text="Average" textAlignment="CENTER" StackPane.alignment="CENTER">
@@ -25,7 +25,7 @@
 						</Label>
 					</children>
 					<padding>
-						<Insets bottom="20.0" left="10.0" right="10.0" top="20.0" />
+						<Insets bottom="30.0" left="10.0" right="10.0" top="30.0" />
 					</padding>
 				</StackPane>
 			</children>
